ComboBox has white Background (Fixes #142); Remove scrollbars in Inspector; other small ui improvements

--- a/src/main/resources/styles/gecko-base.css
+++ b/src/main/resources/styles/gecko-base.css
@@ -200,6 +200,18 @@
     -fx-font: 12px "System";
 }
 
+.inspector-list {
+    -fx-background-color: -fx-fg0;
+    -fx-background-radius: 5;
+    -fx-border-radius: 5;
+    -fx-border-color: -fx-text;
+    -fx-text-fill: -fx-text;
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+    -fx-padding: 2px;
+    -fx-font: 12px "System";
+}
+
 .list-view {
     -fx-background-color: -fx-fg0;
     -fx-background-radius: 5;
@@ -346,6 +358,14 @@
     -fx-font-weight: bold;
     -fx-padding: 2px;
     -fx-font: 12px "System";
+}
+
+.combo-box .cell:filled:selected {
+    -fx-background-color: -fx-editable;
+    -fx-background-radius: 3 0 0 3;
+}
+.combo-box-popup .list-view .list-cell:selected {
+    -fx-background-color: -fx-fg0;
 }
 
 .combo-box .arrow, .combo-box .arrow-button {
